# pyedf

./: LICENSE  README.md  setup.cfg
.github/workflows/: publish-to-pypi.yml
src/pyedf/: edffile.py
