[metadata]
name = pyedf
version = 0.1.0
author = Greg Rapp
author_email = gdrapp@gmail.com
description = A native Python library to read EDF files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gdrapp/pyedf
project_urls =
    Bug Tracker = https://github.com/gdrapp/pyedf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src